--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,8 @@ serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 mongodb = "2"
 bson = "2"
+metrics = "0.18"
+metrics-exporter-prometheus = "0.9"
+axum = "0.6"
+metrics-util = "0.12"
+hyper = { version = "0.14", features = ["full"] }
